--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@hookform/resolvers": "^2.9.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@svgr/webpack": "^6.3.0",
     "next": "11.0.1",
     "next-i18next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
